tests/macros/rawlist/filter_async.stderr
error: option `filter_async` does not exist for kind `rawlist`
 --> $DIR/filter_async.rs:2:53
  |
2 |     let q = inquisition::questions![rawlist { async filter: todo!() }];
  |                                                     ^^^^^^
