tests/macros/rawlist/filter_async.rs
fn main() {
    let q = inquisition::questions![rawlist { async filter: todo!() }];
}
